<?xml version="1.0"?>
<package format="2">
  <name>rosmower</name>
  <version>0.0.1</version>
  <description>rosmower</description>
  <maintainer email="road.and.track@gmail.com">road.and.track@gmail.com</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosmower_msgs</build_depend>
  <build_depend>ds4_driver</build_depend>
  <build_depend>oled_display_node</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ublox_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rosmower_msgs</exec_depend>
  <exec_depend>ds4_driver</exec_depend>
  <exec_depend>oled_display_node</exec_depend>  
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>

  <export>
  </export>
</package>
