<?xml version="1.0"?>
<package format="3">
  <name>rosmower</name>
  <version>0.1.1</version>
  <description>rosmower</description>
  <maintainer email="info@weberpatrick.de">HoverMower</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rosmower_msgs</build_depend>
  <build_depend>ds4_driver</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ublox_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosmower_msgs</exec_depend>
  <exec_depend>ds4_driver</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ublox_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
     <build_type>ament_cmake</build_type>
  </export>  
</package>
